# ChangeLog for net-dns/noip-updater
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/noip-updater/ChangeLog,v 1.50 2014/07/08 15:44:33 pacho Exp $

  08 Jul 2014; Pacho Ramos <pacho@gentoo.org> files/noip.service:
  Needs network-online (#512056 by Martin Vath)

  22 Mar 2014; Michael Palimaka <kensington@gentoo.org>
  -noip-updater-2.1.9.ebuild:
  Remove old.

  10 Jan 2014; Pacho Ramos <pacho@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  ia64 stable, bug #485138

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  Stable for sparc, wrt bug #485138

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  Stable for ppc64, wrt bug #485138

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  Stable for alpha, wrt bug #485138

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  Stable for x86, wrt bug #485138

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> noip-updater-2.1.9-r1.ebuild:
  Stable for amd64, wrt bug #485138

*noip-updater-2.1.9-r1 (31 Aug 2013)

  31 Aug 2013; Pacho Ramos <pacho@gentoo.org> +files/noip.service,
  +noip-updater-2.1.9-r1.ebuild:
  Add unit file (#481490 by Galym Kerimbekov)

  24 Aug 2013; Markus Meier <maekke@gentoo.org> noip-updater-2.1.9.ebuild:
  add ~arm, bug #479860

  20 Aug 2011; Lars Wendler <polynomial-c@gentoo.org> files/noip2.start:
  non-maintainer commit: Removed --oknodo from init script. Thanks to Marcin
  Mirosław who reported this in bug #379437.

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #34534

  04 Jan 2009; Daniel Black <dragonheart@gentoo.org>
  -files/noip-2.1.3-cflags.patch, -files/noip-2.1.4-daemon.patch,
  -noip-updater-2.1.7.ebuild, -noip-updater-2.1.7-r1.ebuild:
  vulnerable version cleanout

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> noip-updater-2.1.9.ebuild: