@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
+	<herd>proxy-maintainers</herd>
 	<maintainer>
-		<email>maintainer-needed@gentoo.org</email>
-	</maintainer>
+                <email>influencedchaos@gmail.com</email>
+                <name>Francis Booth</name>
+                <description>Active Maintainer, Assign bugs</description>
+        </maintainer>
 	<longdescription lang="en">
 		no-ip.com dynamic DNS updater
 	</longdescription>
