@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
-DIST jksrc.v223.zip 121052301 SHA256 07d1a638469e7b278aef4e7bda9d8d3c0bb200003f9e866c4bef5d52f7ad75c9
 DIST jksrc.v260.zip 59090224 SHA256 ec28dad706f69a02f8d8fb56b9e3010f5e23b7880d717e58d9bb8d1e258fe7d1 SHA512 48aa964ab3ae456ab7e7ddc5d73b91774bd4892f21f1498578a5de38d3a07e4684778ddb1ac1ae389d5bbb3586f9b8506ca3697acca1f6777b85d343cf5d9485 WHIRLPOOL 669b0f342a97f84164b32707a3b2bb51f64219168beceb8f9d46211749351b2c65b21ffe830f82620e7112a332e88ca271d4327739d8f93afbe14e399e45e248
-EBUILD ucsc-genome-browser-223.ebuild 2848 SHA256 2ee89fd5991244142b46bbe0720fe2166308443769f451642f7e9036d9983a2e SHA512 64f1b5f0fcce014f1318051f0a6e98aec772cc7465ba157976fd4f3df2356a4bef9b9a0f8e3c008085e7fade89a85a4b9c60d54f6ec0ebc34b76a7d7cac3f0a0 WHIRLPOOL 70f7d617b3cf6b102c21830e62a66cf461e7a467f5ab6c0dbcbb9f20554119dfa6055d74c56ac8051530d7fc8b6dd51edb5e6349f23c613488594e9303615e62
-EBUILD ucsc-genome-browser-260.ebuild 3055 SHA256 8c00967843adf0b4251750c5be0b88a76633169b7ff90a9d4d917edd771b77d0 SHA512 8383df56b08c25f1195216eb74cf9a02d03a2b1103c11f6be46e6a9fb2424b699747780498f81bae96a3fad94b9e5c66542d5a4397c3437b6dffb52c68fae901 WHIRLPOOL 110c7746e1db853cf5b7b30223b3693d0a6330ab6b2861a8dc87a0eacdfc1d1326d38bccea62175846d8405ba37d06ec872dc9c2070e40bf64ac7aa1f7e2fe04
-MISC ChangeLog 1407 SHA256 a423dea868a786a1bf3ce0f793e38fd010bcaa5855d833f2eb09066746cb882a SHA512 463f838fc560602ae31f20ddcb4d6e085c805b64adca7584ed1cb0a67bc0745a12fe005cdb2b15e8fc1080ff4a6ff19b79703e022d57b26316346cf5644acb85 WHIRLPOOL 04fe32a74579a256266c39b40a364fb3529492715757254f0c9fac3fcee331953379d9fde873ef5cc7c9a0413a5ef857cce7a0fd7ade0156e5e36adc838d3e04
+EBUILD ucsc-genome-browser-260.ebuild 3055 SHA256 e67e44a07bea0efc0a5154d20448e22292680c2171cf3ba57ca2b42bb33ba39d SHA512 fcf4d50e1b33eac622a8b2f3121427cb2a0083bd2fca48d9ae648119612d186ae60c2fe9f46ed24d6a660164cc92de35d2f9a168cf613b8b82b40ab2a1b03ecc WHIRLPOOL bf9a15cff9bd313bd72c2a3c1c5d32e4f807c88acd2798870b57f4e959084a9ce79b7deb7d88b6b6eda96c38a35f5eb230d36be087f3e88b2d929335c66ea0f3
+MISC ChangeLog 1543 SHA256 e4528cb56770a7989b4c681b2ca915691d1c4efde053d96bb152ed077ec5bbf8 SHA512 e4f17c85b1df30b7277271edc19409cd9062a64704023ff975ef51321428e3bdae035f1f5f487ebadfa1eef4fc6e3cae2aa788d57b68c27875e88465e7f1c6fc WHIRLPOOL fd8bceba956dd2506377ba6748f43a4fbbb753b35e7bd2397b0955a840b32b20a643d5f4498d2f05acc71094e51523f29f08c3b6e129eb9712fc7ac1791014eb
 MISC metadata.xml 334 SHA256 c6e678d138e9dae13d560ee2c8f3653eec218bc0fe291599fad77cb7301253fe SHA512 56842dd7004f9d15c3bc4be924dcf1218877ac83338c39c2270234c8afd8dc2ec99658de99eb7cdf57f444838324d156149c8ef4e479d3f42bd6ba1304ce94b9 WHIRLPOOL 0ca16d8339b04f382a961435d886a8e68d2bf179e9add2668e3fe47067c71ccbc9a4406c3e9091056067eaaeaafd06efc4b24dfc9f5b630829d96087e3f5a633
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlE/G3IACgkQgAnW8HDreRb0KQCeMsmShZ/6V0gKdD9j3yP5wa2A
-8hYAnRTNhrPYt4tBvypXXeFcxP/T66xC
-=Z8jS
+iQJ8BAEBCgBmBQJVMKaAXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirx14P+wXeUjnuLK+EcYSS8yb6x9em
+OZaxTG1fgCDhsINBSuNoYfZLOszqav+4jWH761Acz0EBdDgcrjK3iqd5daIBif8q
+9M5WJ/vyfJIOABM9fUH24os3q3451T03rEBtg0sHxvKYJrxmZoRYqPubkf9S13db
+qAypSl1NKP1G5BwQdEjkde4xsIRnjyq8OnJ+zaLvweYHSTligaThorUa8g11EWNk
+kCVyON5HlROECXe9YEuvoJpTwSE93f0ogbceWkyBZFvj7TIOT4s2j/hYosB3KGhL
+Oi6zYl7uVajBf32RhTRVESoZcguM4TPsHz4g6p7S3hA078YSSdLxxhmgCKlCg7iH
+T3vxQ/O/Ve4a9GjFlS8cth9B5JJiCFJnwQhDN0USCHDyzuGHZDKRiYEG7H2Wc6US
++u1nRaLog4JGrp/A9Uj8GXXgrE7enP3C1/lHuHdJESWHnn4BoI7tLH8xSVE8ZeJK
+oYdu1GEzJiYbEMkEpFlMVFMdkaqqqpmoXykwZhTO9I8+Bjk1zbHDo80P63w8sGaV
+16ltaFgoHhghOIrdFIVVQmUIgr0d/fQTEA9QR7oTAjk1z4MgozpbEk+ITPHlbksb
++slcXPl203SavOFcXZ529L4OuFDwSB4K/vPRvsZ5BmDAnUbH6AlyrFk8iwAJGB90
+GVpPysTeUiBuAn9YT3iN
+=hFgv
 -----END PGP SIGNATURE-----
