@@ -1,8 +1,8 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/ucsc-genome-browser/ucsc-genome-browser-260.ebuild,v 1.1 2011/12/27 09:39:04 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/ucsc-genome-browser/ucsc-genome-browser-260.ebuild,v 1.2 2015/04/17 06:21:51 jlec Exp $
 
-EAPI=4
+EAPI=5
 
 inherit toolchain-funcs flag-o-matic webapp
 
