@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/ucsc-genome-browser
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/ucsc-genome-browser/ChangeLog,v 1.6 2013/03/12 12:11:29 jlec Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/ucsc-genome-browser/ChangeLog,v 1.7 2015/04/17 06:21:51 jlec Exp $
+
+  17 Apr 2015; Justin Lecher <jlec@gentoo.org> -ucsc-genome-browser-223.ebuild,
+  ucsc-genome-browser-260.ebuild:
+  Drop old; bump EAPI
 
   12 Mar 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Drop Andrey as maintainer so that bugs get assigned to sci-biology directly
@@ -36,4 +40,3 @@
 
   23 Oct 2009; Andrey Kislyuk <weaver@gentoo.org> ChangeLog:
   New package, bug 155780. Ebuild written by me and dawe <daweonline@gmail.com>
-
